2020-05-15  Tim Rühsen  <tim.ruehsen@gmx.de>

	* (libpoke/pkl-lex.l): Remove include xalloc.h.

2020-05-15  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/elf.pk (Elf64_File): Rename from Elf64.
	* maps/elf.map: Updated accordingly.

2020-05-15  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/elf.pk (Elf64.get_string): New mehod.
	(Elf64.get_section_by_name): Likewise.
	(Elf64.get_section_by_type): Likewise.
	(elf_string): Delete function.
	(elf_get_section_by_name): Likewise.
	(elf_get_section_by_type): Likewise.

2020-05-15  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans1_ps_loop_stmt_iterator): New
	handler.
	(pkl_trans1_ps_loop_stmt): Likewise.
	(pkl_phase_trans1): Register handlers.
	* testsuite/poke.pkl/struct-method-10.pk: New test.
	* testsuite/poke.pkl/struct-method-11.pk: Likewise.

2020-05-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map.h: Document in the docstring of the function
	pk_map_load_file that ERRMSG can be set to NULL even if an error
	code is returned.
	* poke/pk-cmd-map.c (pk_cmd_map_load): Adapt accordingly.

2020-05-15  Tim Rühsen  <tim.ruehsen@gmx.de>

	* cfg.mk: New syntax rule sc_rockdabootism_missing_space.
	* common/pk-utils.c (pk_print_binary): Add missing space before
	opening bracket.
	* common/pk-utils.h (pk_str_concat): Likewise.
	* libpoke/ios.c (ios_read_int_common): Likewise.
	(ios_read_int). Likewise.
	* libpoke/pvm-val.c (pvm_print_val_1): Likewise.
	* poke/pk-cmd-set.c (pk_cmd_set_odepth): Likewise.
	(pk_cmd_set_oindent): Likewise.
	(pk_cmd_set_omode): Likewise.
	* poke/pk-hserver.c (pk_hserver_make_hyperlink): Likewise.
	* poke/pk-mi.c (pk_mi_fd_set_nonblocking): Likewise.
	(pk_mi_fd_restore_blocking): Likewise.
	* poke/pk-repl.c (poke_sigint_handler): Likewise.
	(pk_repl): Likewise.
	* libpoke/pkl-lex.l: Likewise.
	* poke/pk-map-lex.l: Likewise.
	* poke/poke.c: Slightly amend comment.

2020-05-15  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/elf.pk (Elf64): New type.