@@ -1,6 +1,12 @@
 2020-05-15  Tim Rühsen  <tim.ruehsen@gmx.de>
 
-	* (libpoke/pkl-lex.l): Remove include xalloc.h.
+	* libpoke/pkl.c: Remove include xalloc.h.
+	(pkl_new): Use calloc instead of xzalloc.
+	(pkl_new): Free memory when returning NULL.
+
+2020-05-15  Tim Rühsen  <tim.ruehsen@gmx.de>
+
+	* libpoke/pkl-lex.l: Remove include xalloc.h.
 
 2020-05-15  Jose E. Marchesi  <jemarch@gnu.org>
 
